<resources>
    <string name="app_name">Dost ki Gadi</string>
    <string name="share">Share Location With Friends</string>
    <string name="book">Get Car</string>
    <string name="number">Number of Friends :</string>
    <string name="bookBtn">Book A Car</string>
    <string name="carsAval">Number Of Cars Available :</string>
    <string name="no_of_frnd">Number of friends</string>
    <string name="initial_cars">3</string>
</resources>
