<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_book"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vinayak.mapsapi.BookActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="10dp"
        android:text="@string/number"
        android:textStyle="normal|bold|italic"
        tools:textSize="18sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="@string/no_of_frnd"
        android:inputType="number"
        android:padding="10dp" />

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:onClick="carBooked"
        android:padding="10dp"
        android:text="@string/bookBtn" />

    <TextView
        android:id="@+id/carsAval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn"
        android:padding="20dp"
        android:text="@string/carsAval"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/noOfcar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn"
        android:layout_toEndOf="@+id/carsAval"
        android:layout_toRightOf="@+id/carsAval"
        android:padding="20dp"
        android:text="@string/initial_cars"
        android:textSize="15sp"
        android:textStyle="bold" />

</RelativeLayout>
